# vibdata

./: pyproject.toml
vibdata/raw/: __init__.py
vibdata/raw/EMP/: EMP_raw.py
vibdata/raw/HUST_Gearbox/: HUST_Gearbox.py
vibdata/raw/Mechanical_Gear/: mechanical_gear.py
vibdata/raw/UOC/: UOC.py
vibdata/raw/UOEMD/: UOEMD.py
vibdata/raw/UOMED/: UOMED.py
vibdata/raw/UORED/: UORED.py
vibdata/resources/: labels.csv
