[tool.poetry]
name = "vibdata"
version = "1.0.0"
description = "A library for loading vibration signals datasets"
authors = ["Igor Mattos dos Santos Varejão <imsvarejao@gmail.com>",
           "Luciano Henrique Peixoto Silva <henriqueps2@hotmail.com>",
           "Lucas Gabriel de Oliveira Costa <lucasgabriiel.oliveira@gmail.com>",
           "Lucas Henrique Sousa Mello <lucashsmello@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.17.2"
torch = ">=1.13.1"
tqdm = "^4.0.0"
requests = "^2.0.0"
pandas = "^1.1.0"
scikit-learn = ">=0.19.1"
rarfile = "^4.0"
scipy = "^1.11.4"
opencv-python = "^4.8.1.78"
gdown = "^4.7.3"
essentia = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
python-lsp-server = ">=1.8.0"
python-lsp-ruff = "^1.5.0"
python-lsp-black = ">=1.3.0"
toml = "^0.10.2"
ipython = "^7.0.0"
seaborn = ">=0.11.0"
pyls-isort = ">=0.2.2"
yapf = "*"
isort = "*"
jupyterlab = "^4.0.8"
matplotlib = ">=3.8.0"

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Sort by the lenght
length_sort=true
profile="black"
multi_line_output=5
line_length=120
use_parentheses=true

[tool.black]
line-length=120
target-version=['py310']
